--- a/requirements.txt
+++ b/requirements.txt
@@ -23,5 +23,6 @@ psycopg2-binary==2.8.3
 Flask==1.1.1
 wordcloud==1.8.0
 dataclasses==0.6
+opencage==1.2.1
 -e git+https://github.com/twintproject/twint.git#egg=twint
 
